Updates to home page copy

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   line-height: 145%;
   color: #282828;
   padding-bottom: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
-  max-width: 520px;
+  max-width: 600px;
   text-align: justify;
 }
 
@@ -165,7 +165,7 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
 
 /*-------------------------HOME VALUES SECTION---------------------*/
 .home_profile {
-  min-height: 100vh;
+  min-height: 65vh;
   width: 100%;
 }
 .home_profile .home_profile_left {
@@ -174,12 +174,11 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   justify-content: center;
   height: 100%;
   gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
-  padding: clamp(2.63rem, 2.5rem + 0.56vw, 3rem) clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  padding: clamp(3.5rem, 3.33rem + 0.74vw, 4rem) clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   background-image: url(../images/JCNP_Home_Profile_Left.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
 }
 .home_profile .home_profile_left .home_profile_left_caption {
   font-family: "Montserrat", sans-serif;
@@ -194,24 +193,26 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   font-size: clamp(2.07rem, 1.97rem + 0.44vw, 2.37rem);
   line-height: 120%;
   color: #bb0722;
+  padding-top: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
 }
 .home_profile .home_profile_left .home_profile_left_text {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   line-height: 145%;
   color: #FFFFFF;
-  max-width: 360px;
+  text-align: justify;
 }
 .home_profile .home_profile_left .home_profile_cta {
   display: flex;
   flex-direction: row;
+  gap: 12px;
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
 }
 .home_profile .home_profile_right {
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
   padding: clamp(2.63rem, 2.5rem + 0.56vw, 3rem) clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   background-image: url(../images/JCNP_home_profile_right.jpg);
   background-position: top;
@@ -219,17 +220,19 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   background-size: cover;
   position: relative;
 }
-.home_profile .home_profile_right .home_profile_right_caption {
+.home_profile .home_profile_right .home_profile_right_heading {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(2.07rem, 1.97rem + 0.44vw, 2.37rem);
   line-height: 120%;
   color: #FFFFFF;
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
 }
 .home_profile .home_profile_right .home_profile_right_text {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   line-height: 145%;
   color: #FFFFFF;
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
 }
 .home_profile .home_profile_right .home_profile_pillars li {
   display: flex;
@@ -239,8 +242,8 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
 }
 .home_profile .home_profile_right .home_profile_pillars li p {
   font-family: "Montserrat", sans-serif;
-  font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
-  line-height: 120%;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
   color: #FFFFFF;
 }
 .home_profile .home_profile_right .home_profile_pillars li .fa-solid {
