--- a/css/style.css
+++ b/css/style.css
@@ -424,11 +424,11 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
 }
 
 /*-------SECTION ONE----------*/
-.about_section_1 {
+.about_section_1_container {
   display: grid;
   margin-top: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
 }
-.about_section_1 .about_section_1_left .about_section_1_left_caption {
+.about_section_1_container .about_section_1_left .about_section_1_left_caption {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(1.56rem, 1.48rem + 0.33vw, 1.78rem);
   line-height: 120%;
@@ -437,10 +437,10 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   text-align: center;
   text-transform: uppercase;
 }
-.about_section_1 .about_section_1_left .about_section_1_left_caption span {
+.about_section_1_container .about_section_1_left .about_section_1_left_caption span {
   color: #130c0c;
 }
-.about_section_1 .about_section_1_left .about_section_1_left_text {
+.about_section_1_container .about_section_1_left .about_section_1_left_text {
   font-family: "Open Sans", sans-serif;
   font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   line-height: 145%;
@@ -448,30 +448,37 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   text-align: justify;
   padding-bottom: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
 }
-.about_section_1 .about_section_1_left .about_section_1_left_cta {
+.about_section_1_container .about_section_1_left .about_section_1_left_cta {
   display: none;
   visibility: hidden;
 }
-.about_section_1 .about_section_1_right img {
+.about_section_1_container .about_section_1_right img {
   width: 100%;
 }
 
 /*-------------About Section 2---------------*/
 .about_section_2 {
-  height: 40vh;
+  min-height: 50vh;
+  width: 100%;
+  margin-top: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+}
+
+.about_section_2_container {
+  min-height: 40vh;
   width: 100%;
 }
-.about_section_2 .about_section_2_left {
+.about_section_2_container .about_section_2_left {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+  justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
   background-color: #DDD9D9;
   padding: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
 }
-.about_section_2 .about_section_2_left h3 {
+.about_section_2_container .about_section_2_left h3 {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(1.56rem, 1.48rem + 0.33vw, 1.78rem);
   line-height: 120%;
@@ -479,7 +486,7 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   text-transform: uppercase;
   text-align: center;
 }
-.about_section_2 .about_section_2_left p {
+.about_section_2_container .about_section_2_left p {
   font-family: "Open Sans", sans-serif;
   font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   line-height: 145%;
@@ -487,22 +494,22 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   text-align: center;
   max-width: 360px;
 }
-.about_section_2 .about_section_2_left button {
+.about_section_2_container .about_section_2_left button {
   align-self: flex-start;
   align-self: center;
 }
-.about_section_2 .about_section_2_right {
+.about_section_2_container .about_section_2_right {
   display: flex;
   flex-direction: column;
-  gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-  justify-content: space-between;
+  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+  justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
   background-color: #130c0c;
   padding: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
 }
-.about_section_2 .about_section_2_right h3 {
+.about_section_2_container .about_section_2_right h3 {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(1.56rem, 1.48rem + 0.33vw, 1.78rem);
   line-height: 120%;
@@ -510,28 +517,109 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   text-transform: uppercase;
   text-align: center;
 }
-.about_section_2 .about_section_2_right p {
+.about_section_2_container .about_section_2_right p {
   font-family: "Open Sans", sans-serif;
   font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   line-height: 145%;
   color: #FFFFFF;
   text-align: center;
 }
-.about_section_2 .about_section_2_right button {
+.about_section_2_container .about_section_2_right button {
   align-self: center;
 }
 
+/*--------------About section 3---------------------*/
 .about_section_3 {
   height: 100vh;
+  width: 100%;
+  margin-top: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+}
+.about_section_3 .about_section_3_container h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.56rem, 1.48rem + 0.33vw, 1.78rem);
+  line-height: 120%;
+  color: #bb0722;
+  padding-bottom: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+  text-transform: uppercase;
+}
+.about_section_3 .about_section_3_container h2 span {
+  color: #130c0c;
+}
+.about_section_3 .about_section_3_container .about_section_3_excecs .about_section_3_excec {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.about_section_3 .about_section_3_container .about_section_3_excecs .about_section_3_excec img {
+  width: 100%;
+  height: 100%;
+}
+.about_section_3 .about_section_3_container .about_section_3_excecs .about_section_3_excec h4 {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
+  line-height: 120%;
+  color: #130c0c;
+  text-transform: uppercase;
+}
+.about_section_3 .about_section_3_container .about_section_3_excecs .about_section_3_excec h5 {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
+  line-height: 120%;
+  color: #bb0722;
+}
+.about_section_3 .about_section_3_container .about_section_3_excecs .about_section_3_excec p {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #282828;
 }
 
+@media screen and (min-width: 800px) and (max-width: 1020px) {
+  .about_section_2_container {
+    display: grid !important;
+    height: 30vh;
+    grid-template-columns: 1fr 1fr !important;
+  }
+  .about_section_2_container .about_section_2_left {
+    justify-content: space-between;
+  }
+  .about_section_2_container .about_section_2_right {
+    justify-content: space-between;
+  }
+  .about_section_3_excecs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  }
+}
 @media screen and (min-width: 1021px) {
-  .about_section_1 {
-    grid-template-columns: 55% 45%;
+  .about_section_1_container {
+    grid-template-columns: 1fr 1fr;
     gap: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
   }
-  .about_section_1 .about_section_1_left_caption {
+  .about_section_1_container .about_section_1_left_caption {
     text-align: left !important;
+  }
+  .about_section_1_container .about_section_1_left_cta {
+    display: block !important;
+    visibility: visible !important;
+  }
+  .about_section_2_container {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr !important;
+    height: 30vh !important;
+    width: 100% !important;
+  }
+  .about_section_2_container .about_section_2_left {
+    justify-content: space-between;
+  }
+  .about_section_2_container .about_section_2_right {
+    justify-content: space-between;
+  }
+  .about_section_3_excecs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   }
 }
 .primary_button {
@@ -711,6 +799,6 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
 }
 @media screen and (max-width: 480px) {
   .container {
-    padding: 0 clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+    padding: 0 10px;
   }
 }/*# sourceMappingURL=style.css.map */
