--- a/sass/page_styles/_about.scss
+++ b/sass/page_styles/_about.scss
@@ -30,7 +30,7 @@
 
 /*-------SECTION ONE----------*/
 
-.about_section_1{
+.about_section_1_container{
     // padding: $space_xxl_64 0;
     display: grid;
     margin-top: $space_xl_48;
@@ -66,18 +66,20 @@
 }
     
 /*-------------About Section 2---------------*/
-
 .about_section_2{
-
-    height: 40vh;
+    min-height: 50vh;
+    width:100%;
+    margin-top: $space_l_32;
+}
+.about_section_2_container{
+    min-height: 40vh;
     width: 100%;
    
-
     .about_section_2_left{
         display: flex;
         flex-direction: column;
-        
-        justify-content: space-between;
+        gap: $space_l_32;
+        justify-content: center;
         align-items: center;
         height: 100%;
         width:100%;
@@ -102,8 +104,8 @@
     .about_section_2_right{
         display: flex;
         flex-direction: column;
-        gap: $space_m_24;
-        justify-content: space-between;
+        gap: $space_l_32;
+        justify-content: center;
         align-items: center;
         height: 100%;
         width:100%;
@@ -125,9 +127,52 @@
     }
 }
 
+
+/*--------------About section 3---------------------*/
+
 .about_section_3{
     height:100vh;
+    width: 100%;
+    margin-top: $space_xl_48;
+    .about_section_3_container{
+
+        h2{
+            @include heading_4($main_font, $primary_colour);
+            padding-bottom: $space_l_32;
+            
+            text-transform: uppercase;
+            span{
+                color: $secondary_colour;
+            }  
+        }
+        .about_section_3_excecs{
+
+            .about_section_3_excec{
+                display: flex;
+                flex-direction: column;
+                gap: $space_m_24;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+                   
+                h4{
+                    @include heading_5($alt_font, $secondary_colour);
+                    text-transform: uppercase;
+
+                }
+                h5{
+                    @include heading_5($alt_font, $primary_colour);
+
+                }
+                p{
+                    @include body_copy($alt_font, $dark_colour);
+                }
+            }
+        }
+    }
 }
+
 
 
 
@@ -144,24 +189,62 @@
 
 //Media Queries
 @media screen and (min-width: 800px) and (max-width: 1020px){
-    .about_section_2{
+    .about_section_2_container{
+        display: grid !important;
+        height: 30vh;
+        grid-template-columns: 1fr 1fr !important;
+        .about_section_2_left{
+            justify-content: space-between;
+        }
+        .about_section_2_right{
+            justify-content: space-between;
+        }
       
+    }
+    .about_section_3_excecs{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: $space_m_24;
     }
 }
 
 
 @media screen and (min-width: 1021px){
-    .about_section_1{
+    .about_section_1_container{
         .about_section_1_left_caption{
             text-align: left !important;
         }
-        grid-template-columns: 55% 45%;
+        grid-template-columns: 1fr 1fr;
         gap: $space_xl_48;
 
+        .about_section_1_left_cta{
+            display: block !important;
+            visibility: visible !important;
+        }
         
     }
 
     .about_section_2{
-       
+        // height: auto !important;
+    }
+
+    .about_section_2_container{
+        display: grid !important;
+        grid-template-columns: 1fr 1fr !important;
+        height: 30vh !important;
+        width: 100% !important;
+        .about_section_2_left{
+            justify-content: space-between;
+        }
+        .about_section_2_right{
+            justify-content: space-between;
+        }
+      
+    }
+
+    .about_section_3_excecs{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: $space_m_24;
     }
 }
