--- a/sass/page_styles/_about.scss
+++ b/sass/page_styles/_about.scss
@@ -146,7 +146,7 @@
             }  
         }
         .about_section_3_excecs{
-
+            
             .about_section_3_excec{
                 display: flex;
                 flex-direction: column;
@@ -170,6 +170,10 @@
                 }
             }
         }
+       img.team_img{
+        width: 100%;
+        height: 100%;
+       }
     }
 }
 
@@ -205,6 +209,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: $space_m_24;
+        margin-bottom: $space_m_24;
     }
 }
 
@@ -246,5 +251,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: $space_m_24;
+        margin-bottom: $space_m_24;
+       
     }
 }
