--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,7 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   align-items: center;
   justify-content: center;
   position: relative;
+  margin-bottom: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
 }
 .page_banner .page_banner_overlay {
   position: absolute;
@@ -409,10 +410,10 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   background-color: #FFFFFF;
   opacity: 0.7;
 }
-.page_banner .page_banner_heading {
+.page_banner .about_banner_heading {
   font-family: "Montserrat", sans-serif;
-  font-size: clamp(2.18rem, 1.5rem + 3.01vw, 4.21rem);
-  line-height: 105%;
+  font-size: clamp(1.56rem, 1.48rem + 0.33vw, 1.78rem);
+  line-height: 120%;
   color: #bb0722;
   position: relative;
   z-index: 5;
@@ -628,6 +629,90 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
     margin-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   }
 }
+.page_banner {
+  height: 50vh;
+  width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+}
+.page_banner .page_banner_overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #FFFFFF;
+  opacity: 0.7;
+}
+.page_banner .qs_banner_heading {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.56rem, 1.48rem + 0.33vw, 1.78rem);
+  line-height: 120%;
+  color: #bb0722;
+  position: relative;
+  z-index: 5;
+  text-transform: uppercase;
+  text-align: center;
+  max-width: 70vw;
+}
+
+.qs_banner {
+  background-image: url(../images/JCNP_About_Us_Banner.jpg);
+}
+.qs_banner span {
+  color: #130c0c;
+}
+
+.service_container .service_list .service_heading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.service_container .service_list .service_heading .service_heading_number {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
+  line-height: 120%;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-color: #bb0722;
+  padding: 6px;
+  border-radius: 4px;
+}
+.service_container .service_list .service_heading .service_heading_text {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
+  line-height: 120%;
+  color: #bb0722;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.service_container .service_item {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  margin-left: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+}
+.service_container .service_item p {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #282828;
+}
+.service_container .service_item .fa-solid {
+  font-size: 10px;
+  color: #bb0722;
+}
+
 .primary_button {
   background-color: transparent;
   border-radius: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
