--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,6 +41,7 @@
 @import './page_styles/blog';
 @import './page_styles/services';
 @import './page_styles/contact';
+@import './page_styles/post';
 @import './components/buttons';
 
 
