--- a/css/style.css
+++ b/css/style.css
@@ -720,6 +720,10 @@ Media Queries Section
     grid-template-columns: 1fr 1fr;
     gap: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
   }
+  .blog_image {
+    width: 70% !important;
+    height: 70% !important;
+  }
 }
 .page_banner {
   height: 50vh;
@@ -810,6 +814,75 @@ Media Queries Section
   color: #bb0722;
 }
 
+.post_banner {
+  height: 50vh;
+  width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+}
+.post_banner .post_banner_overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #FFFFFF;
+  opacity: 0.7;
+}
+.post_banner .post_banner_heading {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(2.07rem, 1.97rem + 0.44vw, 2.37rem);
+  line-height: 120%;
+  color: #bb0722;
+  position: relative;
+  z-index: 5;
+  text-transform: uppercase;
+  text-align: center;
+  max-width: 70vw;
+}
+
+.post_banner {
+  background-image: url(../images/JCNP_Blog.jpg);
+}
+
+.post_section_container {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.post_section_container .post_info p {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #bb0722;
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.post_section_container .post_image {
+  width: 100%;
+  height: 100%;
+}
+.post_section_container .post_body {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #282828;
+}
+
+/*****************
+Media Queries
+************************/
+@media screen and (min-width: 800px) {
+  .post_image {
+    width: 50% !important;
+    height: 50% !important;
+  }
+}
 .primary_button {
   background-color: transparent;
   border-radius: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
