--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Open+Sans:wght@300;400;500&display=swap");
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -32,6 +34,196 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   margin: 0 auto;
 }
 
+header {
+  height: auto;
+  width: 100%;
+  padding: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) 0;
+  background-color: #130c0c;
+}
+header .fa-solid {
+  color: #bb0722;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+
+.navigation_top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+.navigation_top p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  color: #FFFFFF;
+}
+.navigation_top a {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #FFFFFF;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  color: #FFFFFF;
+  transition: all ease 0.5s;
+}
+.navigation_top a:hover {
+  opacity: 0.5;
+}
+.navigation_top .navigation_top_left li {
+  cursor: pointer;
+}
+.navigation_top .navigation_top_right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+}
+.navigation_top .navigation_top_right .navigation_top_right_contact {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
+}
+.navigation_top .navigation_top_right .navigation_top_right_hours {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
+}
+
+.navigation_bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.navigation_bottom .navigation_bottom_left .logo img {
+  height: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+}
+.navigation_bottom .navigation_bottom_right nav .links_container {
+  display: flex;
+  flex-direction: row;
+  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+  align-items: center;
+}
+.navigation_bottom .navigation_bottom_right nav .links_container .link_item {
+  display: inline-block;
+}
+.navigation_bottom .navigation_bottom_right nav .links_container .link_item a {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #FFFFFF;
+  transition: all ease 0.5s;
+}
+.navigation_bottom .navigation_bottom_right nav .links_container .link_item a:hover {
+  color: #bb0722;
+}
+.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu button {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #FFFFFF;
+  background: transparent;
+  border: none;
+  transition: all ease 0.5s;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu button .fa-solid {
+  color: #bb0722;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  padding-left: 8px;
+}
+.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu button:hover {
+  color: #bb0722;
+}
+.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu .drop_down {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 12px;
+  position: absolute;
+  top: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+  left: -64px;
+  min-width: 340px;
+  height: 0;
+  opacity: 0;
+  background-color: #130c0c;
+  z-index: 100;
+  padding: 0 clamp(1.75rem, 1.67rem + 0.37vw, 2rem) clamp(1.75rem, 1.67rem + 0.37vw, 2rem) clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+}
+.navigation_bottom .mobile_btn {
+  display: none;
+  position: relative;
+  z-index: 1000;
+}
+.navigation_bottom .mobile_btn .mobile_btn_flex {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  padding: 8px;
+  background-color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.navigation_bottom .mobile_btn .mobile_btn_flex .btn_line {
+  height: 2px;
+  width: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+  background-color: #bb0722;
+}
+
+@media screen and (max-width: 1008px) {
+  .navigation_top {
+    display: none !important;
+  }
+  nav {
+    position: absolute;
+    padding-top: clamp(3.5rem, 3.33rem + 0.74vw, 4rem);
+    padding-left: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+    padding-right: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+    top: 0;
+    left: 0;
+    min-height: 100vh;
+    width: 100%;
+    background-color: #130c0c;
+    z-index: 50;
+    transform: translateY(-120%);
+  }
+  nav .links_container {
+    flex-direction: column !important;
+    align-items: flex-start !important;
+    justify-content: center !important;
+    gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) !important;
+  }
+  nav .links_container .drop_down_menu {
+    position: relative;
+  }
+  nav .links_container .drop_down_menu .drop_down {
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    min-width: 100px !important;
+    z-index: 100;
+    padding: 0 !important;
+    padding-top: 16px !important;
+  }
+  .mobile_btn {
+    position: absolute !important;
+    display: block !important;
+    right: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) !important;
+    top: clamp(1.75rem, 1.67rem + 0.37vw, 2rem) !important;
+  }
+}
 .home_hero {
   height: 100vh;
   width: 100%;
