JS for navigation

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -208,6 +208,8 @@ header{
                     left: 0!important;
                     min-width: 100px !important;
                     z-index: 100;
+                    // opacity: 0 !important;
+                    // height: 0 !important;
                     padding: 0 !important ;
                     padding-top: 16px !important;
                     .drop_down_item{
