--- a/sass/page_styles/_about.scss
+++ b/sass/page_styles/_about.scss
@@ -132,7 +132,7 @@
 /*--------------About section 3---------------------*/
 
 .about_section_3{
-    height:100vh;
+    min-height:100vh;
     width: 100%;
     margin-top: $space_xl_48;
     .about_section_3_container{
