--- a/css/style.css
+++ b/css/style.css
@@ -155,9 +155,11 @@ header .fa-solid {
   position: absolute;
   top: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
   left: -64px;
-  min-width: 340px;
+  width: 0;
   height: 0;
+  visibility: none;
   opacity: 0;
+  transform: translateY(-10px);
   background-color: #130c0c;
   z-index: 100;
   padding: 0 clamp(1.75rem, 1.67rem + 0.37vw, 2rem) clamp(1.75rem, 1.67rem + 0.37vw, 2rem) clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
@@ -212,7 +214,6 @@ header .fa-solid {
     position: relative !important;
     top: 0 !important;
     left: 0 !important;
-    min-width: 100px !important;
     z-index: 100;
     padding: 0 !important;
     padding-top: 16px !important;
@@ -222,6 +223,84 @@ header .fa-solid {
     display: block !important;
     right: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) !important;
     top: clamp(1.75rem, 1.67rem + 0.37vw, 2rem) !important;
+  }
+}
+footer {
+  background-color: #130c0c;
+  padding: clamp(1.75rem, 1.67rem + 0.37vw, 2rem) 0px;
+}
+
+.footer_groups {
+  display: grid;
+}
+
+.footer_group_container {
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.footer_group_container .footer_group_heading {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
+  line-height: 120%;
+  color: #bb0722;
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.footer_group_container .group_item {
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.footer_group_container .group_item a {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #FFFFFF;
+  transition: all ease 0.5s;
+}
+.footer_group_container .group_item a:hover {
+  color: #bb0722;
+}
+.footer_group_container .group_item p {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #FFFFFF;
+}
+.footer_group_container .group_item .fa-solid, .footer_group_container .group_item .fa-brands {
+  color: #bb0722;
+}
+.footer_group_container .contact_item {
+  display: flex;
+  flex-direction: row;
+  gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  align-items: center;
+}
+
+.footer_logo img {
+  height: 82px;
+}
+
+@media screen and (min-width: 800px) and (max-width: 1020px) {
+  .footer_groups {
+    grid-template-columns: 1fr 1fr;
+    gap: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+  }
+  .footer_logo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: clamp(3.5rem, 3.33rem + 0.74vw, 4rem);
+  }
+  .footer_logo img {
+    height: 100px;
+  }
+}
+@media screen and (min-width: 1021px) {
+  .footer_groups {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+  }
+  .footer_logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 .home_hero {
@@ -723,7 +802,7 @@ header .fa-solid {
 
 /*--------------About section 3---------------------*/
 .about_section_3 {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   margin-top: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
 }
@@ -1136,7 +1215,7 @@ Media Queries
     gap: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
   }
 }
-.page_banner {
+.post_banner {
   height: 50vh;
   width: 100%;
   background-position: center center;
@@ -1148,7 +1227,7 @@ Media Queries
   position: relative;
   margin-bottom: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
 }
-.page_banner .post_banner_overlay {
+.post_banner .post_banner_overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -1157,7 +1236,7 @@ Media Queries
   background-color: #FFFFFF;
   opacity: 0.7;
 }
-.page_banner .post_banner_heading {
+.post_banner .post_banner_heading {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(2.07rem, 1.97rem + 0.44vw, 2.37rem);
   line-height: 120%;
@@ -1177,6 +1256,7 @@ Media Queries
   display: flex;
   flex-direction: column;
   gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  margin-bottom: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
 }
 .post_section_container .post_info p {
   font-family: "Open Sans", sans-serif;
