--- a/sass/page_styles/_post.scss
+++ b/sass/page_styles/_post.scss
@@ -1,4 +1,4 @@
-.page_banner{
+.post_banner{
     height: 50vh;
     width: 100%;
     background-position: center center;
@@ -36,6 +36,7 @@
         display: flex;
         flex-direction: column;
         gap: $space_m_24;
+        margin-bottom: $space_l_32;
         .post_info{
             p{
                 @include body_copy($alt_font, $primary_colour);
