--- a/css/style.css
+++ b/css/style.css
@@ -805,6 +805,7 @@ footer {
   min-height: 100vh;
   width: 100%;
   margin-top: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+  margin-bottom: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
 }
 .about_section_3 .about_section_3_container h2 {
   font-family: "Montserrat", sans-serif;
@@ -1160,6 +1161,9 @@ Media Queries Section
   height: 100%;
 }
 
+.contact_section_2 {
+  margin-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
 .contact_section_2 h3 {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
