--- a/sass/page_styles/_about.scss
+++ b/sass/page_styles/_about.scss
@@ -135,6 +135,7 @@
     min-height:100vh;
     width: 100%;
     margin-top: $space_xl_48;
+    margin-bottom: $space_xl_48;
     .about_section_3_container{
 
         h2{
