--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -136,7 +136,7 @@ header{
                         height: 0;
                         visibility: none;
                         opacity: 0;
-                        transform: translateY(-10px);
+                        // transform: translateY(-10px);
                         background-color: $secondary_colour;
                         z-index: 100;
                         padding: 0  $space_l_32  $space_l_32 $space_l_32 ;
