--- a/sass/page_styles/_post.scss
+++ b/sass/page_styles/_post.scss
@@ -29,7 +29,7 @@
     }
 
     .post_banner{
-        background-image: url(/images/JCNP_Image.png);
+        background-image: url(../images/JCNP_Image.png);
     }
 
     .post_section_container{
