--- a/sass/page_styles/_contact.scss
+++ b/sass/page_styles/_contact.scss
@@ -29,7 +29,7 @@
     }
 
     .contact_banner{
-        background-image: url(/images/JCNP_Image.png);
+        background-image: url(../images/JCNP_Image.png);
     }
 
     .contact_section_1{
