--- a/sass/page_styles/_services.scss
+++ b/sass/page_styles/_services.scss
@@ -81,3 +81,9 @@
         }
        }
     }
+
+  .service .service_buttons{
+    display: flex;
+    flex-direction:row;
+    gap: $space_xl_48;
+  }
