--- a/css/style.css
+++ b/css/style.css
@@ -1185,6 +1185,12 @@ Media Queries Section
   color: #bb0722;
 }
 
+.service .service_buttons {
+  display: flex;
+  flex-direction: row;
+  gap: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+}
+
 .page_banner {
   height: 50vh;
   width: 100%;
@@ -1551,6 +1557,23 @@ Media Queries
   height: 180%;
   border-radius: 0 0 50% 50%;
   background-color: #130c0c;
+}
+
+.primary_text_button {
+  gap: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem);
+  border: none;
+  padding: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) 0;
+  background-color: transparent;
+}
+.primary_text_button a {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  text-transform: uppercase;
+  color: #bb0722;
+  font-weight: 600;
+}
+.primary_text_button a .fa-solid {
+  padding: 0 clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
 }
 
 @media screen and (max-width: 480px) {
