--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -175,7 +175,23 @@
 }
 
 
+.primary_text_button{
+    
+    gap: $space_xs_12;
+    border: none;
+    padding: $space_s_16 0;
+    background-color: transparent;
+    a{
 
+        @include button_text($alt_font);
+        color: $primary_colour;
+        font-weight: 600;
+        
+        .fa-solid{
+            padding: 0 $space_m_24;
+        }
+    }
+}
 
 
 // Media Queries 
