--- a/css/style.css
+++ b/css/style.css
@@ -517,6 +517,7 @@ footer {
 }
 .home_service .home_service_container .home_service_cards .home_service_card .home_service_card_image {
   width: 100%;
+  height: 100%;
 }
 .home_service .home_service_container .home_service_cards .home_service_card .home_service_card_heading {
   font-family: "Montserrat", sans-serif;
@@ -894,6 +895,7 @@ footer {
   line-height: 145%;
   color: #FFFFFF;
   text-align: center;
+  text-align: justify;
 }
 .about_section_2_container .about_section_2_right button {
   align-self: center;
@@ -923,8 +925,8 @@ footer {
   gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
 }
 .about_section_3 .about_section_3_container .about_section_3_excecs .about_section_3_excec img {
-  width: 100%;
-  height: 100%;
+  width: 218px;
+  height: 218px;
 }
 .about_section_3 .about_section_3_container .about_section_3_excecs .about_section_3_excec h4 {
   font-family: "Open Sans", sans-serif;
@@ -938,6 +940,7 @@ footer {
   font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
   line-height: 120%;
   color: #bb0722;
+  text-align: justify;
 }
 .about_section_3 .about_section_3_container .about_section_3_excecs .about_section_3_excec p {
   font-family: "Open Sans", sans-serif;
@@ -996,7 +999,7 @@ footer {
   .about_section_3_excecs {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+    gap: clamp(3.5rem, 3.33rem + 0.74vw, 4rem) !important;
     margin-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   }
 }
@@ -1560,7 +1563,6 @@ Media Queries
 }
 
 .primary_text_button {
-  gap: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem);
   border: none;
   padding: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) 0;
   background-color: transparent;
@@ -1572,8 +1574,38 @@ Media Queries
   color: #bb0722;
   font-weight: 600;
 }
-.primary_text_button a .fa-solid {
-  padding: 0 clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+.primary_text_button i.fa-solid {
+  padding: 0 10px;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  color: #bb0722;
+  transition: all ease 0.3s;
+}
+.primary_text_button:hover a {
+  color: #130c0c;
+}
+.primary_text_button:hover i.fa-solid {
+  color: #130c0c;
+}
+
+.text_button_inactive {
+  border: none;
+  padding: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) 0;
+  background-color: transparent;
+  pointer-events: none;
+  opacity: 0.5;
+}
+.text_button_inactive a {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  text-transform: uppercase;
+  color: #bb0722;
+  font-weight: 600;
+}
+.text_button_inactive i.fa-solid {
+  padding: 0 10px;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  color: #bb0722;
+  transition: all ease 0.3s;
 }
 
 @media screen and (max-width: 480px) {
