--- a/sass/page_styles/_about.scss
+++ b/sass/page_styles/_about.scss
@@ -120,6 +120,7 @@
         p{
             @include body_copy($alt_font, $white_colour);
             text-align: center;
+            text-align: justify;
         }
         button{
             align-self: center;
@@ -154,8 +155,8 @@
                 flex-direction: column;
                 gap: $space_m_24;
                 img{
-                    width: 100%;
-                    height: 100%;
+                    width: 218px;
+                    height: 218px;
                 }
                    
                 h4{
@@ -165,6 +166,7 @@
                 }
                 h5{
                     @include heading_5($alt_font, $primary_colour);
+                    text-align: justify
 
                 }
                 p{
@@ -252,7 +254,7 @@
     .about_section_3_excecs{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: $space_m_24;
+        gap: $space_xxl_64 !important;
         margin-bottom: $space_m_24;
        
     }
