--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -114,6 +114,8 @@
                 gap: $space_m_24;
                 .home_service_card_image{
                     width:100%;
+                    height: 100%;
+                    // border-radius: 50%;
                     // padding-bottom: $space_m_24;
                 }
                 .home_service_card_heading{
